@startuml

title __VIEWS's Class Diagram__\n

  package com.deviantsatyr.healthy {
    package com.deviantsatyr.healthy.views {
      class DailyMealsListFragment {
          - mDailyMealsAdapter : ArrayAdapter<String>
          - mDailyMealsListView : ListView
          - mDB : FirebaseFirestore
          - mDailyMealsRepository : Repository<Dining>
          + DailyMealsListFragment()
          {static} + instance()
          + onCreateView()
          + onItemClick()
          + setNavigator()
      }
    }
  }
  

  class SavedState {
      {static} + CREATOR : ClassLoaderCreator<SavedState>
      ~ SavedState()
      + describeContents()
      + writeToParcel()
  }
  

  interface Creator {
      {abstract} + createFromParcel()
      {abstract} + newArray()
  }
  

  interface ClassLoaderCreator {
      {abstract} + createFromParcel()
  }
  

  class InstantiationException {
      + InstantiationException()
  }
  

  package com.deviantsatyr.healthy {
    package com.deviantsatyr.healthy.views {
      class DailySummaryActivity {
          {static} - RC_SIGN_IN : int
          - mButtonNavigate : View
          - mIsPhone : boolean
          - mAuth : FirebaseAuth
          # onCreate()
          + navigateWith()
          + onStart()
          - updateUI()
          - shouldStartSignIn()
          - startSignIn()
      }
    }
  }
  

  package com.deviantsatyr.healthy {
    package com.deviantsatyr.healthy.views {
      class GadgetsFragment {
          ~ pStatus : int
          ~ mTVCalPercentage : TextView
          + GadgetsFragment()
          + onCreateView()
          {static} + instance()
      }
    }
  }
  

  class SavedState {
      {static} + CREATOR : ClassLoaderCreator<SavedState>
      ~ SavedState()
      + describeContents()
      + writeToParcel()
  }
  

  interface Creator {
      {abstract} + createFromParcel()
      {abstract} + newArray()
  }
  

  interface ClassLoaderCreator {
      {abstract} + createFromParcel()
  }
  

  class InstantiationException {
      + InstantiationException()
  }
  

  package com.deviantsatyr.healthy {
    package com.deviantsatyr.healthy.views {
      class MealDetailsActivity {
          # onCreate()
      }
    }
  }
  

  package com.deviantsatyr.healthy {
    package com.deviantsatyr.healthy.views {
      class MealDetailsFragment {
          - mMeal : String
          - mMealTextView : TextView
          + MealDetailsFragment()
          + onCreateView()
          {static} + instance()
          + setMeal()
      }
    }
  }
  

  class SavedState {
      {static} + CREATOR : ClassLoaderCreator<SavedState>
      ~ SavedState()
      + describeContents()
      + writeToParcel()
  }
  

  interface Creator {
      {abstract} + createFromParcel()
      {abstract} + newArray()
  }
  

  interface ClassLoaderCreator {
      {abstract} + createFromParcel()
  }
  

  class InstantiationException {
      + InstantiationException()
  }
  

  DailyMealsListFragment -up-|> OnItemClickListener
  DailyMealsListFragment -up-|> Fragment
  DailyMealsListFragment o-- Navigator : navigator
  DailyMealsListFragment o-- Navigator : mNavigator
  DailyMealsListFragment +-down- SavedState
  DailyMealsListFragment +-down- InstantiationException
  SavedState -up-|> Parcelable
  SavedState +-down- Creator
  SavedState +-down- ClassLoaderCreator
  InstantiationException -up-|> AndroidRuntimeException
  DailySummaryActivity -up-|> Navigator
  DailySummaryActivity -up-|> Activity
  DailySummaryActivity o-- DailyMealsListFragment : mDailyMealsListFragment
  DailySummaryActivity o-- GadgetsFragment : mGadgetsFragment
  DailySummaryActivity o-- MealDetailsFragment : mMealDetailsFragment
  GadgetsFragment -up-|> Fragment
  GadgetsFragment +-down- SavedState
  GadgetsFragment +-down- InstantiationException
  SavedState -up-|> Parcelable
  SavedState +-down- Creator
  SavedState +-down- ClassLoaderCreator
  InstantiationException -up-|> AndroidRuntimeException
  MealDetailsActivity -up-|> Activity
  MealDetailsActivity o-- MealDetailsFragment : mMealDetailsFragment
  MealDetailsFragment -up-|> Fragment
  MealDetailsFragment +-down- SavedState
  MealDetailsFragment +-down- InstantiationException
  SavedState -up-|> Parcelable
  SavedState +-down- Creator
  SavedState +-down- ClassLoaderCreator
  InstantiationException -up-|> AndroidRuntimeException


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
